crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI041_PYI041.py.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI041.py:22:14: PYI041 Use `float` instead of `int | float`
   |
22 | def f0(arg1: float | int) -> None:
   |              ^^^^^^^^^^^ PYI041
23 |     ...
   |

PYI041.py:26:30: PYI041 Use `complex` instead of `float | complex`
   |
26 | def f1(arg1: float, *, arg2: float | list[str] | type[bool] | complex) -> None:
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI041
27 |     ...
   |

PYI041.py:30:28: PYI041 Use `float` instead of `int | float`
   |
30 | def f2(arg1: int, /, arg2: int | int | float) -> None:
   |                            ^^^^^^^^^^^^^^^^^ PYI041
31 |     ...
   |

PYI041.py:34:26: PYI041 Use `float` instead of `int | float`
   |
34 | def f3(arg1: int, *args: Union[int | int | float]) -> None:
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^ PYI041
35 |     ...
   |

PYI041.py:38:24: PYI041 Use `float` instead of `int | float`
   |
38 | async def f4(**kwargs: int | int | float) -> None:
   |                        ^^^^^^^^^^^^^^^^^ PYI041
39 |     ...
   |

PYI041.py:42:26: PYI041 Use `float` instead of `int | float`
   |
42 | def f5(arg1: int, *args: Union[int, int, float]) -> None: 
   |                          ^^^^^^^^^^^^^^^^^^^^^^ PYI041
43 |     ...
   |

PYI041.py:46:26: PYI041 Use `float` instead of `int | float`
   |
46 | def f6(arg1: int, *args: Union[Union[int, int, float]]) -> None: 
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI041
47 |     ...
   |

PYI041.py:50:26: PYI041 Use `float` instead of `int | float`
   |
50 | def f7(arg1: int, *args: Union[Union[Union[int, int, float]]]) -> None: 
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI041
51 |     ...
   |

PYI041.py:54:26: PYI041 Use `float` instead of `int | float`
   |
54 | def f8(arg1: int, *args: Union[Union[Union[int | int | float]]]) -> None: 
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI041
55 |     ...
   |

PYI041.py:62:24: PYI041 Use `complex` instead of `float | complex`
   |
60 |         ...
61 | 
62 |     def bad(self, arg: int | float | complex) -> None:
   |                        ^^^^^^^^^^^^^^^^^^^^^ PYI041
63 |         ...
   |

PYI041.py:62:24: PYI041 Use `complex` instead of `int | complex`
   |
60 |         ...
61 | 
62 |     def bad(self, arg: int | float | complex) -> None:
   |                        ^^^^^^^^^^^^^^^^^^^^^ PYI041
63 |         ...
   |
