crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI041_PYI041.pyi.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI041.pyi:21:14: PYI041 Use `float` instead of `int | float`
   |
21 | def f0(arg1: float | int) -> None: ...  # PYI041
   |              ^^^^^^^^^^^ PYI041
   |

PYI041.pyi:24:30: PYI041 Use `complex` instead of `float | complex`
   |
24 | def f1(arg1: float, *, arg2: float | list[str] | type[bool] | complex) -> None: ...  # PYI041
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI041
   |

PYI041.pyi:27:28: PYI041 Use `float` instead of `int | float`
   |
27 | def f2(arg1: int, /, arg2: int | int | float) -> None: ...  # PYI041
   |                            ^^^^^^^^^^^^^^^^^ PYI041
   |

PYI041.pyi:30:26: PYI041 Use `float` instead of `int | float`
   |
30 | def f3(arg1: int, *args: Union[int | int | float]) -> None: ...  # PYI041
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^ PYI041
   |

PYI041.pyi:33:24: PYI041 Use `float` instead of `int | float`
   |
33 | async def f4(**kwargs: int | int | float) -> None: ...  # PYI041
   |                        ^^^^^^^^^^^^^^^^^ PYI041
   |

PYI041.pyi:36:26: PYI041 Use `float` instead of `int | float`
   |
36 | def f5(arg1: int, *args: Union[int, int, float]) -> None: ...  # PYI041
   |                          ^^^^^^^^^^^^^^^^^^^^^^ PYI041
   |

PYI041.pyi:39:26: PYI041 Use `float` instead of `int | float`
   |
39 | def f6(arg1: int, *args: Union[Union[int, int, float]]) -> None: ...  # PYI041
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI041
   |

PYI041.pyi:42:26: PYI041 Use `float` instead of `int | float`
   |
42 | def f7(arg1: int, *args: Union[Union[Union[int, int, float]]]) -> None: ...  # PYI041
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI041
   |

PYI041.pyi:45:26: PYI041 Use `float` instead of `int | float`
   |
45 | def f8(arg1: int, *args: Union[Union[Union[int | int | float]]]) -> None: ...  # PYI041
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI041
   |

PYI041.pyi:51:24: PYI041 Use `complex` instead of `float | complex`
   |
49 |     def good(self, arg: int) -> None: ...
50 | 
51 |     def bad(self, arg: int | float | complex) -> None: ...  # PYI041
   |                        ^^^^^^^^^^^^^^^^^^^^^ PYI041
   |

PYI041.pyi:51:24: PYI041 Use `complex` instead of `int | complex`
   |
49 |     def good(self, arg: int) -> None: ...
50 | 
51 |     def bad(self, arg: int | float | complex) -> None: ...  # PYI041
   |                        ^^^^^^^^^^^^^^^^^^^^^ PYI041
   |
